<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:splitMotionEvents="false"
    tools:context=".SignUp">

    <!--BACKGROUND-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/jimbo_primary" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="0dp"
        android:background="@color/jimbo_secondary" />

    <!--LOGO-->
    <ImageView
        android:id="@+id/splash_ava"
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@null"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:layout_marginLeft="160dp" />

    <!--SIGN UP-->
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_ava"
        android:layout_marginLeft="170dp"
        android:text="@string/create_sign_up"
        android:textSize="@dimen/sign_up"
        android:textColor="@color/white"
        android:fontFamily="cursive"/>

    <!--NAME-->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="10dp"
        android:layout_marginStart="65dp"
        android:text="@string/text_name"
        android:textSize="@dimen/text_name_sign_up"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_below="@id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="Enter your name" />

    <View
        android:id="@+id/name_under"
        android:layout_width="313dp"
        android:layout_height="2dp"
        android:layout_below="@id/edt_name"
        android:layout_marginStart="50dp"
        android:background="@color/white" />

    <!--PHONE-->
    <TextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_under"
        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:text="@string/text_phone"
        android:textSize="@dimen/text_name_sign_up"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_below="@id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="phone"
        android:hint="Enter phone number" />

    <View
        android:id="@+id/phone_under"
        android:layout_width="313dp"
        android:layout_height="2dp"
        android:layout_below="@id/edt_phone"
        android:layout_marginStart="50dp"
        android:background="@color/white" />


    <!--EMAIL-->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_under"
        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:text="@string/text_email"
        android:textSize="@dimen/text_name_sign_up"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_below="@id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:hint="Enter email" />

    <View
        android:id="@+id/email_under"
        android:layout_width="313dp"
        android:layout_height="2dp"
        android:layout_below="@id/edt_email"
        android:layout_marginStart="50dp"
        android:background="@color/white" />

    <!--PASSWORD-->

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_under"
        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:text="@string/text_password"
        android:textSize="@dimen/text_name_sign_up"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="Enter password" />
    <View
        android:id="@+id/pass_under"
        android:layout_width="313dp"
        android:layout_height="2dp"
        android:layout_below="@id/edt_pass"
        android:layout_marginStart="50dp"
        android:background="@color/white" />

    <!--CONFIRM PASSWORD-->

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_under"
        android:layout_marginTop="15dp"
        android:layout_marginStart="65dp"
        android:text="@string/text_confirm_password"
        android:textSize="@dimen/text_name_sign_up"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_below="@id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:ems="15"
        android:background="@color/white"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="Re-enter password" />
    <View
        android:id="@+id/confirm_pass_under"
        android:layout_width="313dp"
        android:layout_height="2dp"
        android:layout_below="@id/edt_confirm_pass"
        android:layout_marginStart="50dp"
        android:background="@color/white" />

    <!-- BUTTON SIGN IN -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_above="@id/sign_up_footer"
        android:layout_below="@id/confirm_pass_under"
        android:layout_marginTop="1dp">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:background="@color/jimbo_highlight"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/sign_in_btn_text_size" />
    </LinearLayout>

    <!-- FOOTER SIGN IN -->
    <LinearLayout
        android:id="@+id/sign_up_footer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAllCaps="true"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/sign_text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/sign_in"
            android:background="@null"
            android:padding="10dp"
            android:textSize="@dimen/sign_text_size"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>