<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/backgroud"
    android:splitMotionEvents="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".ContactScreen">

    <!-- FRAME HEADER -->

    <ImageView
        android:background="@color/dark_green"
        android:scaleType="fitXY"
        android:layout_alignBottom="@id/header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <FrameLayout
        android:splitMotionEvents="false"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:splitMotionEvents="false"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            tools:ignore="UselessParent">

            <!--BUTTON BACK-->
            <ImageButton
                android:id="@+id/back"
                android:background="@null"
                android:src="@drawable/btn_back"
                android:scaleType="fitCenter"
                android:paddingLeft="10dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />

            <!-- TEXT PROFILE -->
            <TextView
                android:textColor="@color/white"
                android:text="@string/contact_title"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </FrameLayout>

    <!--FRAME CONTENT-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--BACKGROUND PHOTO-->
        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/wallpaper">
        </ImageView>

        <!--CONTENT-->
        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="370dp"
            android:layout_height="430dp"
            android:layout_marginLeft="20dp"
            android:background="@color/lite_white">

            <!--REQUEST INFO-->
            <TextView
                android:id="@+id/requestInfo"
                android:layout_width="171dp"
                android:layout_height="100dp"
                android:layout_marginLeft="100dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/contact_request"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/contact_request" />

            <!--REQUEST UNDER-->
            <TextView
                android:id="@+id/requestUnder"
                android:layout_width="243dp"
                android:layout_height="60dp"
                android:layout_below="@id/requestInfo"
                android:layout_marginLeft="65dp"
                android:gravity="center"
                android:text="@string/contact_req_under"
                android:textColor="@color/light_orange"
                android:textSize="@dimen/contact_req_under" />

            <!--NAME-->
            <TextView
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/requestUnder"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:text="@string/contact_name"
                android:textSize="@dimen/contact_name"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

            <EditText
                android:id="@+id/edt_name"
                android:layout_below="@id/contactName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:ems="15"
                android:background="@color/white"
                android:padding="10dp"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/name_under"
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_below="@id/edt_name"
                android:layout_marginLeft="25dp"
                android:background="@color/dark_green" />

            <!--COMMENTS-->
            <TextView
                android:id="@+id/contactComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_under"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:text="@string/contact_phone"
                android:textSize="@dimen/contact_name"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

            <EditText
                android:id="@+id/edt_comment"
                android:layout_below="@id/contactComment"
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"
                android:ems="15"
                android:background="@color/white"
                android:padding="10dp"
                android:inputType="text" />

            <View
                android:id="@+id/comment_under"
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:layout_below="@id/edt_comment"
                android:layout_marginLeft="25dp"
                android:background="@color/dark_green" />


            <!-- BUTTON SIGN IN -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/comment_under"
                android:layout_marginTop="1dp">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="45dp"
                    android:background="@color/brown"
                    android:text="@string/contact_submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/contact_submit" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/required"
                    android:text="@string/contact_required"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>